# mkdocs-mike-oauth

./: Dockerfile  mkdocs.yml  pyproject.toml  setup.py
.github/workflows/: publish_render_pages.yaml
closed/: index.html
closed/index2/: index.html
docs/: index2.md
plugins/: exclude_pages.py
site/closed/: 404.html
site/closed/search/: search_index.json
